# sot-pattern-generator

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  NEWS  README.md  index.html  package.xml
.travis/: build
debian/: changelog  control  copyright  libsot-pattern-generator-doc.doc-base  libsot-pattern-generator-doc.install  libsot-pattern-generator1.1.1.install  rules
doc/: Doxyfile.extra.in  footer.html  header.html  package.dox.cmake
doc/additionalDoc/: package.hh
doc/pictures/: footer.txt
doxygen/HEAD/: a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00037.map  a00037.md5  a00038.map  a00038.md5  a00039.map  a00039.md5  (+334 more)
doxygen/HEAD/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6a.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_79.html  all_7a.html  all_7e.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_69.html  classes_6a.html  classes_6b.html  classes_6d.html  classes_6e.html  (+114 more)
include/: CMakeLists.txt
include/sot-pattern-generator/: CMakeLists.txt  exception-pg.h  next-step-pg-sot.h  next-step.h  pg-manager.h  pg.h  selector.h  sot-pattern-generator-api.hh  sot-pattern-generator.hh  sotNextStepOpenHRP.h  sotNextStepPgSot.h  sotPGManager.h  sotPatternGenerator.h  sotSelector.h  sotStepChecker.h  sotStepComputer.h  sotStepComputerForce.h  sotStepComputerJoystick.h  sotStepComputerPos.h  sotStepObserver.h  sotStepQueue.h  sotStepTimeLine.h  sotWhichFootUpper.h  step-checker.h  step-computer-force.h  step-computer-joystick.h  step-computer-pos.h  step-computer.h  step-observer.h  step-queue.h  step-time-line.h  toes-handler-zmp.h  toes-handler.h  which-foot-upper.h
include/sot/pattern-generator/: CMakeLists.txt  next-step-pg-sot.h  next-step.h  pg-manager.h  pg.h  selector.h  step-checker.h  step-computer-force.h  step-computer-joystick.h  step-computer-pos.h  step-computer.h  step-observer.h  step-queue.h  step-time-line.h  which-foot-upper.h
private_cmake/: config_private.hh.cmake
python/: CMakeLists.txt  ThreadInterruptibleLoop.py  kineromeo.py  meta_double_task_6d.py  robotSpecific.py  walk_online.py  walk_romeo.py  walk_romeo_small.py  walk_straight.py  walkdebug.py  walkhrp2.py  walkhrp2.py.cmake  walkhrp2.py.in  walkromeo.py  walksimple.py  walksimple_romeo.py  walksimple_romeo_notoes.py  walksimple_romeo_sndOrder.py
src/: CMakeLists.txt  exception-pg.cpp  next-step-pg-sot-python.hh  next-step-pg-sot.cpp  next-step-python.hh  next-step.cpp  pg-manager-python.hh  pg-manager.cpp  pg-python.hh  pg-tools.cpp  pg-tools.h  pg.cpp  selector-python.hh  selector.cpp  sot-pattern-generator.cc  sotNextStepOpenHRP.cpp  sotNextStepPgSot.cpp  sotPGManager.cpp  sotPatternGenerator.cpp  sotSelector.cpp  sotStepChecker.cpp  sotStepComputerForce.cpp  sotStepComputerJoystick.cpp  sotStepComputerPos.cpp  sotStepObserver.cpp  sotStepQueue.cpp  sotStepTimeLine.cpp  sotWhichFootUpper.cpp  step-checker.cpp  step-computer-force-python.hh  step-computer-force.cpp  step-computer-joystick-python.hh  step-computer-joystick.cpp  step-computer-pos-python.hh  step-computer-pos.cpp  step-observer-python.hh  step-observer.cpp  step-queue-python.hh  step-queue.cpp  step-time-line-python.hh  (+5 more)
src/dynamic_graph/sot/pattern_generator/: __init__.py  meta_pg.py  meta_selector.py  walking.py
tests/: CMakeLists.txt  main.cc
unitTesting/: CMakeLists.txt  main.cc  sot-pattern-generator-test.cc  sot-pattern-generator-test.hh
