#
#  Copyright
#

SET(EXECUTABLE_NAME test${PROJECT_NAME})

ADD_DEFINITIONS(-DDEBUG=2)

ADD_EXECUTABLE(${EXECUTABLE_NAME}
  main.cc)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)

LINK_DIRECTORIES(${${PROJECT_NAME}_BINARY_DIR}/src)
SET(EXECUTABLE_DEPENDENCIES
  next-step
  next-step-pg-sot
  step-checker
  step-computer-joystick
  step-observer
  step-queue
  step-time-line
  which-foot-upper
  pg
  pg-manager
  )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${EXECUTABLE_DEPENDENCIES})
ADD_DEPENDENCIES(${EXECUTABLE_NAME} ${EXECUTABLE_DEPENDENCIES})

ADD_TEST(main_test ${EXECUTABLE_NAME})
PKG_CONFIG_USE_DEPENDENCY(${EXECUTABLE_NAME} pinocchio)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} jrl-walkgen::jrl-walkgen)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} sot-core::sot-core)
